fixed double scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@ p {
 }
 
 .routesContainer {
+  /* overflow: none; */
   height: 100vh;
   width: 100vw;
 
@@ -96,6 +97,7 @@ i {
 }
 
 .heyContainer {
+  margin-bottom: 3rem;
   margin-right: 3rem;
   width: 50%;
   display: flex;
@@ -523,9 +525,10 @@ textarea {
   }
 
   .heyContainer {
+    border: 1px solid red;
     margin: 0 auto;
     margin-top: 1rem;
-    margin-bottom: 5rem;
+    margin-bottom: 8rem;
     width: 100vw;
   }
 
